# VIPV-surCO-Server

./: .dockerignore  .gitignore  Dockerfile  README.md  README_SERVER.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-pinned.txt  requirements.txt
flaskr/: Epicollect_GetData.py  GraphMaker.py  MapMaker.py  Score.py  __init__.py  bbdd_edit.py  claves.py  db.py  db_tables.py  env_config.py  models.py
flaskr/api/: __init__.py  v1.py
flaskr/common/: __init__.py  credentials_validator.py  user_login_and_register.py
flaskr/common_files/: __init__.py  files.py  files_getters.py
flaskr/common_user/: __init__.py  user_clientinfo.py  user_getters.py  user_login_signin.py
flaskr/static/css/: a-links.css  card-views.css  custom.css  main.css
flaskr/static/js/: app_map.js  app_map_worker.js  app_mapa.js
flaskr/templates/: about.html  contact.html  datos.html  feedback.html  index.html  login.html  madrid_map.html  nav.html  profile.html  session_map.html  signup.html  usuario.html  wtf.html
flaskr/templates/privacy-policy/: privacy-policy-conf.json  privacy-policy-en.jinja2  privacy-policy-es.jinja2
flaskr/templates_unused/: datos.html  mapa.html  prueba.html  usuario.html
flaskr/users_common/: user_login_signin.py
flaskr/web/: __init__.py  v1.py
other/: README.md  session_filesizes.py
secrets/: template_secrets.toml
server_configuration/: README.md  surCO_app
test/: README.md  conftest.py  test_api_v1.py
test_runtime/: .env_template  README.md  conftest.py  test_00_register_user.py  test_01_login_and_upload_session.py
test_runtime/data/sessions/: VIPV_2025-06-06T06_42_37.544229Z-2025-06-06T15_06_31.891352Z_light.txt
