[project]
name = "VIPV-Data-Crowdsourcing-Server"
version = "0.1.0"
description = "VIPV feasibility analysis via crowdsourced data - Server"
dependencies = [
    "Flask~=3.0.0",
    "Flask-Session",
    "Flask-SQLAlchemy",
    "Flask-JWT-Extended",
    "werkzeug",
    "argon2-cffi",
]

[project.optional-dependencies]
dev = [
    "flake8",
    "Flake8-pyproject",
    "ruff",
]
all = ["VIPV-Data-Crowdsourcing-Server[dev]"]

[tool.ruff]
line-length = 88

[tool.flake8]
max-line-length = 88
